# pattern_tracker

./: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui
directory_scanner/: directory_scanner.cpp  directory_scanner.h
directory_scanner/file_scanner/: file_scanner.cpp  file_scanner.h
searcher/: searcher.cpp  searcher.h
